# CEOs

./: BF.cpp  BF.h  CMakeLists.txt  Compile.sh  Concomitant.cpp  Concomitant.h  Concomitant_Repeat.cpp  DiamondSampling.cpp  DiamondSampling.h  Greedy.cpp  Greedy.h  Header.cpp  Header.h  Header.h.save-failed  InputParser.cpp  InputParser.h  MIPS.cbp  MIPS.depend  MIPS.layout  NormRangeLSH.cpp  NormRangeLSH.cpp.bak  NormRangeLSH.h  README.md  Readme.txt  SimpleLSH.cpp  SimpleLSH.h  Test.cpp  Test.h  Utilities.cpp  Utilities.h  WedgeSampling.cpp  WedgeSampling.h  _Compile 64 bits.txt  _Dataset.txt  _readme.txt  main.cpp  prng.cpp  prng.h  setup.py
.github/workflows/: conda.yml  wheels.yml
data/: _matrix_Q_10_5.txt  _matrix_X_10_5_col.txt  matrix_Q_10_5.txt  matrix_X_10_5.txt
python/: python_wrapper.cpp
src/: CEOs.cpp  CEOs.h  CEOs_develop.cpp  Header.h  Utilities.cpp  Utilities.h  coCEOs.cpp  coCEOs.h  main.cpp  streamCEOs.cpp  streamCEOs.h
test/: Netflix_Q_999_300.txt  gist_benchmark.py  imagenet_benchmark.py  netflix_benchmark.py  run_MIPS.py  run_dynamic_MIPS.py  run_static_MIPS.py  sift_benchmark.py  txt2bin.py  utils.py
